fixed prev issue, now nav bar is just off screen to the right with left: 100vw, however this isnt transitionable...

--- a/public/style/css/master.css
+++ b/public/style/css/master.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Catamaran|Heebo|Montserrat");
 header:hover nav {
+  left: auto;
   right: 0;
 }
 
@@ -7,7 +8,8 @@ header nav {
   position: fixed;
   top: 0;
   bottom: 0;
-  right: -100%;
+  left: 100vw;
+  right: auto;
   background-color: white;
   opacity: 0.95;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
