--- a/public/style/sass/header/_nav.sass
+++ b/public/style/sass/header/_nav.sass
@@ -1,12 +1,14 @@
 header:hover
   nav
+    left: auto
     right: 0
 
 header nav
   position: fixed
   top: 0
   bottom: 0
-  right: -100%
+  left: 100vw
+  right: auto
 
   background-color: white
   opacity: .95
